--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "babel-preset-es201": "^0.0.1-security",
+    "babel-preset-es2015": "^6.24.1",
     "contentful": "^10.3.1",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.8.0"
+    "react-icons": "^4.8.0",
+    "react-pdf": "^7.1.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
