--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-pdf/renderer": "^3.1.12",
     "babel-preset-es201": "^0.0.1-security",
     "babel-preset-es2015": "^6.24.1",
     "contentful": "^10.3.1",
